2009-01-07  Jan Sjodin  <jan.sjodin@amd.com>

	PR tree-optimization/38492
	PR tree-optimization/38498
	* testsuite/gcc.dg/graphite/pr38500.c: Fixed warning as committed
	in trunk.
	* testsuite/gcc.dg/graphite/block-0.c: Update test.
	* testsuite/gcc.dg/graphite/block-1.c: Same.
	* testsuite/gcc.dg/graphite/block-2.c: Remove xfail and test for blocking.
	* testsuite/gcc.dg/graphite/block-4.c: Remove test for strip mine.
	* testsuite/gcc.dg/graphite/block-3.c: New.
	* testsuite/gcc.dg/graphite/pr38498.c: New.

2009-01-07  H.J. Lu  <hongjiu.lu@intel.com>

	AVX Programming Reference (December, 2008)
	* gcc.target/i386/avx-vmovntdq-256-1.c: New.
	* gcc.target/i386/avx-vmovntpd-256-1.c: Likewise.
	* gcc.target/i386/avx-vmovntps-256-1.c: Likewise.

	* gcc.target/i386/sse2-movntdq-1.c (TEST): Align array to 16byte.
	* gcc.target/i386/sse2-movntpd-1.c (TEST): Likewise.

2009-01-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/38220
	* gfortran.dg/c_loc_pure_1.f90:  New test.

2009-01-06  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/38669
	* gfortran.dg/elemental_dependency_3.f90:
	Add the final tree dump cleanup.

2009-01-06  Jakub Jelinek  <jakub@redhat.com>

	* gfortran.dg/pr23095.f: Require ilp32 in target selection instead of
	passing -m32.

	PR rtl-optimization/38722
	* gfortran.dg/pr38722.f90: New test.

2009-01-06  Janis Johnson  <janis187@us.ibm.com>

	PR c/34252
	* gcc.dg/dfp/decfloat-constants.c: Check for DECnn_SUBNORMAL_MIN
	instead of DECnn_DEN.  Support -DDBG to list lines that fail.

2009-01-06  Dominique Dhumieres  <dominiq@lps.ens.fr>

	* gfortran.dg/implicit_12.f90: Add space around dg directive.
	* gfortran.dg/typebound_call_8.f03: Same.
	* gfortran.dg/elemental_bind_c.f90: Same.
	* gfortran.dg/typebound_call_7.f03: Same.
	* gfortran.dg/interface_proc_end.f90: Same
	* gfortran.dg/pr37243.f: Fix typo.

2009-01-06  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/struct-ret-3.c (CHUNK_SIZE): New define.  Use CHUNK_SIZE