@@ -181,36 +181,6 @@ proc dg-add-options { args } {
     }
 }
 
-# Check the flags with which the test will be run against options in
-# a test directive that will skip or xfail that test.  The DejaGnu proc
-# check_conditional_xfail will look at the options in compiler_flags, so
-# set that up for this test based on flags we know about.
-
-proc check_test_flags { args } {
-    global compiler_flags
-    upvar 2 dg-extra-tool-flags extra_tool_flags
-
-    # Pull the args out of the enclosing list.
-    set args [lindex $args 0]
-
-    # Start the list with a dummy tool name so the list will match "*"
-    # if there are no flags.
-    set compiler_flags " toolname "
-    append compiler_flags $extra_tool_flags
-    set dest [target_info name]
-    if [board_info $dest exists multilib_flags] {
-	append compiler_flags "[board_info $dest multilib_flags] "
-    }
-
-    set answer [check_conditional_xfail $args]
-
-    # Any value in this variable originally was left over from an earlier test.
-    set compiler_flags ""
-
-    verbose "check_test_flags: $args $answer" 2
-    return $answer
-}
-
 # Compare flags for a test directive against flags that will be used to
 # compile the test: multilib flags, flags for torture options, and either
 # the default flags for this group of tests or flags specified with a
